"""AI Service Module for handling AI-related operations."""

import asyncio
from typing import Any

import httpx


class AIService:
    """AI Service class for managing AI operations and model interactions."""

    def __init__(self) -> None:
        """Initialize AI service with default settings."""
        self.initialized: bool = False
        self.model: dict[str, Any] = {'name': 'test_model'}

    async def initialize_model(self) -> bool:
        """Initialize AI model and required resources."""
        if self.initialized:
            return True

        await asyncio.sleep(2)  # Simulate model loading
        self.model = {'name': 'demo_model', 'status': 'loaded'}
        self.initialized = True
        return True

    async def call_external_ai_api(
        self, endpoint: str, payload: dict[str, Any]
    ) -> dict[str, Any]:
        """Make HTTP requests to external AI APIs."""
        try:
            async with httpx.AsyncClient() as client:
                response = await client.post(endpoint, json=payload)
                response.raise_for_status()
                return response.json()
        except httpx.HTTPError as e:
            raise Exception(f'External API call failed: {e!s}') from e

    async def process_text(
        self, text: str, options: dict[str, Any] | None = None
    ) -> dict[str, Any]:
        """Process text input using AI models."""
        if not self.initialized:
            await self.initialize_model()

        try:
            result = await self.call_external_ai_api(
                'https://api.external-ai.com/process',
                {'text': text, 'options': options or {}},
            )
            return result
        except Exception:
            return {
                'input': text,
                'output': f'Fallback response to: {text}',
                'processing_time': '1.0s',
                'model_used': self.model['name'],
            }

    async def generate_image(
        self, prompt: str, options: dict[str, Any] | None = None
    ) -> dict[str, Any]:
        """Generate images from text prompts."""
        await asyncio.sleep(2)  # Simulate processing time

        return {
            'prompt': prompt,
            'image_url': 'https://example.com/generated-image.png',
            'generation_time': '2.0s',
        }


# Create singleton service instance
ai_service = AIService()
